# audio_platform

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2ceb56c5a238_project_expected_segments_per_source_품질_.py  5baec808b70f_initial_schema_project_dataset_segment_.py  b24fcfe0578f_collection_target_uploaded_by_docs_15.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/audio/: io.py  metadata.py  naming.py  waveform.py
backend/app/background/: worker.py
backend/app/core/: auth.py  config.py  database.py  exceptions.py
backend/app/hooks/: README.md  events.py  notion.py  ntfy.py
backend/app/models/: __init__.py  base.py  dataset.py  history.py  job.py  project.py  segment.py  source_file.py
backend/app/repositories/: __init__.py  base.py  dataset_repo.py  history_repo.py  job_repo.py  project_repo.py  segment_repo.py  source_file_repo.py
backend/app/schemas/: common.py  dataset.py  job.py  project.py  (+3 more)
backend/scripts/: setup_drive_auth.py
backend/tests/: conftest.py  test_api_upload.py  test_auth.py  test_cached_drive.py  test_collection_uploader.py  test_cutting.py  test_cutting_silence.py  test_delete_api.py  test_drive_storage.py  test_export.py  test_label_validation.py  test_metadata.py  test_naming.py  test_notion_hook.py  test_processing.py  test_quality_ntfy.py  test_repositories.py  test_reprocessing.py  test_reusability.py  test_segment_audio.py  test_segment_labels.py  test_stats.py  test_storage.py  test_waveform.py
(+91 files in other folders)
