[project]
name = "audio-platform-backend"
version = "0.1.0"
description = "오디오 데이터셋 관리 플랫폼 백엔드 (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-multipart>=0.0.12",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pydub>=0.25",
    "numpy>=1.26",
    "pandas>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
